# pl0e

./: .bazelrc  .clang-format  .gitignore  AGENTS.md  Containerfile  MODULE.bazel  Makefile  README.md  TODO.md  e1.bzl  koka.bzl  setup.sh  setup_makefile.sh
.agents/: LEDGER.md  TECH_DEBT_AUDIT.md
.agents/rules/: LEDGER.md
.gemini/: settings.json
.github/workflows/: ci.yml
bench/: BUILD.bazel  bench.sh  bench_intbits.sh  llvmjit.sh
docs/: BAZEL.md  DESIGN.md  E1_SPEC.md  E3_SPEC.md  FUZZING.md  IMPLEMENTATIONS.md  ISSUES.md  PEG_SPEC.md  PL0_1_SPEC.md  minimal_turing_languages.md
examples/: BUILD.bazel  collatz.e2  collatz.e4  collatz_1.pl0  example.e3  example.e4  example.e5  example.e6  factorial.e2  factorial.e4  factorial_y.e3  gcd.e2  gcd.e4  gcd_1.pl0  lvalue.e4  lvalue.e5  lvalue.e6  simple.e3  test_dead_code.e1  test_dead_code.pl0  test_dead_code2.e1  test_dead_code2.pl0  test_dead_code3.e1  test_dead_code3.pl0  test_dead_code4.e1  test_dead_code4.pl0
fuzz/: BUILD.bazel  e1_diff.sh  e2_diff.sh  e3_diff.sh  e4_diff.sh  e5_diff.sh  e6_diff.sh  e6_illtyped.sh  reduce.sh
fuzz-failures/: e4_seed_9005.e4  e4_seed_9005_e4peg.out
rules_koka/: BUILD.bazel  MODULE.bazel  README.md  extensions.bzl
rules_koka/koka/: defs.bzl
rules_koka/koka/private/: providers.bzl  repo.bzl  rules.bzl  toolchain.bzl
src/: BUILD.bazel  e0.peg  e0peg.kk  e0peg.koka  e1-eval.kk  e1-parser.kk  e1-types.kk  e1.bzl  e1.kk  e1.peg  e1peg.kk  e1peg.koka  e2.peg  e2peg.kk  e2peg.koka  e3.peg  e3_minimal.peg  e3_nofunc.peg  e3peg.kk  e3peg.koka  e4.peg  e4peg.kk  e4peg.koka  e5.peg  e5peg.kk  e5peg.koka  e6.peg  e6peg.kk  e6peg.koka  efuzz.kk  efuzz.koka  minimal.peg  peg.kk  peg.koka  pegeval.koka  pl0_1.cpp  pl0_1.hpp  pl0_1.peg  pl0_1_bigint.hpp  pl0_1_compile.cpp  (+5 more)
test/: BUILD.bazel  e1_test.sh  e3_test.sh  e4_test.sh  e5_test.sh  e6_test.sh  peg_test.kk  run_peg_test.sh
