module(name = "pl0e", version = "0.1.0")

# rules_cc pinned to match toolchains_llvm_bootstrapped (it removed targets
# this toolchain still references in 0.2.17+); bump when the toolchain does.
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_shell", version = "0.8.0")

# Primary C++ toolchain - builds libc++ from source for hermeticity
bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.5.9")
register_toolchains("@toolchains_llvm_bootstrapped//toolchain:all")

# Hermetic Koka toolchain
bazel_dep(name = "rules_koka", version = "0.1.0")
local_path_override(module_name = "rules_koka", path = "rules_koka")

koka_ext = use_extension("@rules_koka//:extensions.bzl", "koka_ext")
koka_ext.toolchain()
use_repo(koka_ext, "koka")
register_toolchains("@koka//:toolchain")

# Extra LLVM tools (lli, llvm-link) via toolchains_llvm
# Uses statically-linked binaries - no GLIBCXX dependency
bazel_dep(name = "toolchains_llvm", version = "1.7.0")
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(name = "llvm_tools", llvm_version = "21.1.8")
use_repo(llvm, "llvm_tools_llvm")
