load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "bench",
    srcs = ["bench.sh"],
    args = [
        "$(location //examples:factorial_cpp)",
        "$(location //examples:factorial_llvm)",
        "$(location //src:e1)",
        "$(location //examples:factorial.e1)",
        "$(location //src:e1peg)",
        "$(location //src:e2peg)",
        "$(location //examples:factorial.e2)",
        "$(location //src:e1_koka)",
        "$(location //examples:factorial_llvm.ll)",
        "$(location //src:e1_rt_bigint_ll)",
        "$(location @llvm_tools_llvm//:bin/lli)",
        "$(location @llvm_tools_llvm//:bin/llvm-link)",
        "$(location @llvm_tools_llvm//:lib/clang/21/lib/x86_64-unknown-linux-gnu/libclang_rt.builtins.a)",
    ],
    data = [
        "//examples:factorial_cpp",
        "//examples:factorial_llvm",
        "//src:e1",
        "//examples:factorial.e1",
        "//src:e1peg",
        "//src:e2peg",
        "//examples:factorial.e2",
        "//src:e1_koka",
        "//src:e1.peg",
        "//src:e2.peg",
        "//examples:factorial_llvm.ll",
        "//src:e1_rt_bigint_ll",
        "@llvm_tools_llvm//:bin/lli",
        "@llvm_tools_llvm//:bin/llvm-link",
        "@llvm_tools_llvm//:lib/clang/21/lib/x86_64-unknown-linux-gnu/libclang_rt.builtins.a",
    ],
)

# LLVM JIT benchmark using toolchains_llvm (statically linked - no GLIBCXX issues)
sh_binary(
    name = "llvmjit",
    srcs = ["llvmjit.sh"],
    args = [
        "$(location //examples:factorial_llvm.ll)",
        "$(location //src:e1_rt_bigint_ll)",
        "$(location @llvm_tools_llvm//:bin/lli)",
        "$(location @llvm_tools_llvm//:bin/llvm-link)",
        "$(location @llvm_tools_llvm//:lib/clang/21/lib/x86_64-unknown-linux-gnu/libclang_rt.builtins.a)",
    ],
    data = [
        "//examples:factorial_llvm.ll",
        "//src:e1_rt_bigint_ll",
        "@llvm_tools_llvm//:bin/lli",
        "@llvm_tools_llvm//:bin/llvm-link",
        "@llvm_tools_llvm//:lib/clang/21/lib/x86_64-unknown-linux-gnu/libclang_rt.builtins.a",
    ],
)

# Benchmark comparing INT_BITS settings (hermetic)
sh_binary(
    name = "bench_intbits",
    srcs = ["bench_intbits.sh"],
    args = [
        "$(location //src:e1_int0_limb32)",
        "$(location //src:e1_int0_limb64)",
        "$(location //src:e1_int0_limb128)",
        "$(location //src:e1_int64)",
        "$(location //src:e1_int512)",
        "$(location //examples:factorial.e1)",
    ],
    data = [
        "//src:e1_int0_limb32",
        "//src:e1_int0_limb64",
        "//src:e1_int0_limb128",
        "//src:e1_int64",
        "//src:e1_int512",
        "//examples:factorial.e1",
    ],
)
