load("//:e1.bzl", "e1_cpp_binary", "e1_llvm_binary")

# C++ backend targets
e1_cpp_binary(name = "factorial_cpp", src = "factorial.e1")
e1_cpp_binary(name = "collatz_cpp", src = "collatz.e1")
e1_cpp_binary(name = "gcd_cpp", src = "gcd.e1")

# LLVM backend targets
e1_llvm_binary(name = "factorial_llvm", src = "factorial.e1")
e1_llvm_binary(name = "collatz_llvm", src = "collatz.e1")
e1_llvm_binary(name = "gcd_llvm", src = "gcd.e1")

# Export example files for tests/benchmarks
exports_files(glob(["*.e1", "*.e0", "*.e2", "*.e3"]))

filegroup(
    name = "e1_examples",
    srcs = glob(["*.e1"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "e0_examples", 
    srcs = glob(["*.e0"]),
    visibility = ["//visibility:public"],
)
