load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

# Differential fuzzing for e1 (see docs/FUZZING.md):
#   bazel run //fuzz:diff -- <count> <start-seed> <size>
# e2/e3/e4 PEG interpreters are not in the matrix yet: their grammars lack
# break_ifz, so they cannot parse e1 programs with loops.
_DIFF_ARGS = [
    "$(location //src:efuzz)",
    "$(location //src:e1)",
    "$(location //src:e1_koka)",
    "$(location //src:e1peg)",
    "$(location //src:e1_compile)",
    "$(location @llvm_tools_llvm//:bin/lli)",
    "$(location @llvm_tools_llvm//:bin/llvm-link)",
    "$(location //src:e1_rt_bigint_ll)",
    "$(location @llvm_tools_llvm//:lib/clang/21/lib/x86_64-unknown-linux-gnu/libclang_rt.builtins.a)",
]

_DIFF_DATA = [
    "//src:efuzz",
    "//src:e1",
    "//src:e1_koka",
    "//src:e1peg",
    "//src:e1_compile",
    "//src:e1.peg",
    "//src:e1_rt_bigint_ll",
    "@llvm_tools_llvm//:bin/lli",
    "@llvm_tools_llvm//:bin/llvm-link",
    "@llvm_tools_llvm//:lib/clang/21/lib/x86_64-unknown-linux-gnu/libclang_rt.builtins.a",
]

sh_binary(
    name = "diff",
    srcs = ["e1_diff.sh"],
    args = _DIFF_ARGS,
    data = _DIFF_DATA,
)

sh_test(
    name = "efuzz_smoke",
    srcs = ["e1_diff.sh"],
    args = _DIFF_ARGS + [
        "--",
        "10",
        "1",
        "15",
    ],
    data = _DIFF_DATA,
    timeout = "moderate",
)
