load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

# Differential fuzzing for e1 (see docs/FUZZING.md):
#   bazel run //fuzz:diff -- <count> <start-seed> <size>
# e2/e3/e4 PEG interpreters are not in the matrix: their grammars lack
# break_ifz by design (docs/DESIGN.md "Superset deviations"), so they cannot
# parse e1 programs with loops.
_DIFF_ARGS = [
    "$(location //src:efuzz)",
    "$(location //src:e1)",
    "$(location //src:e1_koka)",
    "$(location //src:e1peg)",
    "$(location //src:e1_compile)",
    "$(location @llvm_tools_llvm//:bin/lli)",
    "$(location @llvm_tools_llvm//:bin/llvm-link)",
    "$(location //src:e1_rt_bigint_ll)",
    "$(location @llvm_tools_llvm//:lib/clang/21/lib/x86_64-unknown-linux-gnu/libclang_rt.builtins.a)",
]

_DIFF_DATA = [
    "//src:efuzz",
    "//src:e1",
    "//src:e1_koka",
    "//src:e1peg",
    "//src:e1_compile",
    "//src:e1.peg",
    "//src:e1_rt_bigint_ll",
    "@llvm_tools_llvm//:bin/lli",
    "@llvm_tools_llvm//:bin/llvm-link",
    "@llvm_tools_llvm//:lib/clang/21/lib/x86_64-unknown-linux-gnu/libclang_rt.builtins.a",
]

sh_binary(
    name = "diff",
    srcs = ["e1_diff.sh"],
    args = _DIFF_ARGS,
    data = _DIFF_DATA,
)

sh_test(
    name = "efuzz_smoke",
    srcs = ["e1_diff.sh"],
    args = _DIFF_ARGS + [
        "--",
        "10",
        "1",
        "15",
    ],
    data = _DIFF_DATA,
    timeout = "moderate",
)

# Same but with the mutator on (4th arg = mutation passes), gating efuzz
# Phase 4: semantics-preserving mutations must still match the oracle.
sh_test(
    name = "efuzz_mut_smoke",
    srcs = ["e1_diff.sh"],
    args = _DIFF_ARGS + [
        "--",
        "10",
        "1",
        "15",
        "3",
    ],
    data = _DIFF_DATA,
    timeout = "moderate",
)

# Differential fuzzing for e2 (e2peg vs e3peg vs expected):
#   bazel run //fuzz:diff_e2 -- <count> <start-seed> <size>
_DIFF_E2_ARGS = [
    "$(location //src:efuzz)",
    "$(location //src:e2peg)",
    "$(location //src:e3peg)",
]

_DIFF_E2_DATA = [
    "//src:efuzz",
    "//src:e2peg",
    "//src:e3peg",
    "//src:e2.peg",
    "//src:e3.peg",
]

sh_binary(
    name = "diff_e2",
    srcs = ["e2_diff.sh"],
    args = _DIFF_E2_ARGS,
    data = _DIFF_E2_DATA,
)

sh_test(
    name = "efuzz_e2_smoke",
    srcs = ["e2_diff.sh"],
    args = _DIFF_E2_ARGS + [
        "--",
        "10",
        "1",
        "15",
    ],
    data = _DIFF_E2_DATA,
    timeout = "moderate",
)

sh_test(
    name = "efuzz_e2_mut_smoke",
    srcs = ["e2_diff.sh"],
    args = _DIFF_E2_ARGS + [
        "--",
        "10",
        "1",
        "15",
        "3",
    ],
    data = _DIFF_E2_DATA,
    timeout = "moderate",
)

# Differential fuzzing for e3 (e3peg vs expected + enforce oracle):
#   bazel run //fuzz:diff_e3 -- <count> <start-seed> <size>
_DIFF_E3_ARGS = [
    "$(location //src:efuzz)",
    "$(location //src:e3peg)",
]

_DIFF_E3_DATA = [
    "//src:efuzz",
    "//src:e3peg",
    "//src:e3.peg",
]

sh_binary(
    name = "diff_e3",
    srcs = ["e3_diff.sh"],
    args = _DIFF_E3_ARGS,
    data = _DIFF_E3_DATA,
)

sh_test(
    name = "efuzz_e3_smoke",
    srcs = ["e3_diff.sh"],
    args = _DIFF_E3_ARGS + [
        "--",
        "10",
        "1",
        "15",
    ],
    data = _DIFF_E3_DATA,
    timeout = "moderate",
)

sh_test(
    name = "efuzz_e3_mut_smoke",
    srcs = ["e3_diff.sh"],
    args = _DIFF_E3_ARGS + [
        "--",
        "10",
        "1",
        "15",
        "3",
    ],
    data = _DIFF_E3_DATA,
    timeout = "moderate",
)

# Differential fuzzing for e4 (e4peg vs expected + enforce oracle):
#   bazel run //fuzz:diff_e4 -- <count> <start-seed> <size>
_DIFF_E4_ARGS = [
    "$(location //src:efuzz)",
    "$(location //src:e4peg)",
]

_DIFF_E4_DATA = [
    "//src:efuzz",
    "//src:e4peg",
    "//src:e4.peg",
]

sh_binary(
    name = "diff_e4",
    srcs = ["e4_diff.sh"],
    args = _DIFF_E4_ARGS,
    data = _DIFF_E4_DATA,
)

sh_test(
    name = "efuzz_e4_smoke",
    srcs = ["e4_diff.sh"],
    args = _DIFF_E4_ARGS + [
        "--",
        "10",
        "1",
        "15",
    ],
    data = _DIFF_E4_DATA,
    timeout = "moderate",
)

sh_test(
    name = "efuzz_e4_mut_smoke",
    srcs = ["e4_diff.sh"],
    args = _DIFF_E4_ARGS + [
        "--",
        "10",
        "1",
        "15",
        "3",
    ],
    data = _DIFF_E4_DATA,
    timeout = "moderate",
)

# Delta-debugging reducer (see docs/FUZZING.md):
#   bazel run //fuzz:reduce_e4 -- <seed> <size> <mutate>
# Shrinks a failing efuzz program (against e4peg) to a minimal repro.
sh_binary(
    name = "reduce_e4",
    srcs = ["reduce.sh"],
    args = [
        "$(location //src:efuzz)",
        "$(location //src:e4peg)",
        "4",
    ],
    data = [
        "//src:efuzz",
        "//src:e4peg",
        "//src:e4.peg",
    ],
)

sh_binary(
    name = "reduce_e3",
    srcs = ["reduce.sh"],
    args = [
        "$(location //src:efuzz)",
        "$(location //src:e3peg)",
        "3",
    ],
    data = [
        "//src:efuzz",
        "//src:e3peg",
        "//src:e3.peg",
    ],
)
